# bedrock

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  SECURITY.md  bedrock.bat  requirements.txt  robots.txt
.github/workflows/: ci.yml  publish.yml
core/: .gitignore  MANIFEST.in  pyproject.toml
core/bedrock/: __init__.py  __main__.py  cli.py  config.py  health.py  server.py
core/bedrock/access_control/: __init__.py  controller.py
core/bedrock/audit/: __init__.py  chain.py
core/bedrock/data_separation/: __init__.py  anonymous_id.py  consent.py  silo.py
core/bedrock/encryption/: __init__.py  aad.py  engine.py  legacy.py  version.py
core/bedrock/identity/: __init__.py  attestation.py  capabilities.py  certificates.py  node.py  registration.py
core/bedrock/key_management/: __init__.py  keys.py  rotation.py
core/bedrock/licensing/: __init__.py  checkout.py  enforcement.py  keygen.py  webhook.py
core/bedrock/mesh/: __init__.py  detector.py  healing.py  integration.py  router.py  state_machine.py
core/bedrock/metering/: __init__.py
core/bedrock/server/: __init__.py  app.py  tls.py
core/bedrock/storage/: __init__.py  persistence.py  sqlite_backend.py
core/bedrock/transport/: __init__.py  security.py
deploy/: .env.example  Dockerfile  docker-compose.yml
docs/: BEDROCK_ARCHITECTURE_SPEC.md  BEDROCK_IMPLEMENTATION_PLAN.md  PRODUCTION_DEPLOYMENT.md  TECHNICAL_NOTES.md
docs/compliance/: README.md  dfars-cmmc-compliance-kit.md  glba-compliance-kit.md  hipaa-compliance-kit.md  pci-dss-compliance-kit.md  soc2-compliance-kit.md
docs/developer-portal/: api-reference.md  configuration.md  quick-start.md
docs/developer-portal/tutorials/: banking-tutorial.md  defense-tutorial.md  healthcare-tutorial.md  investment-tutorial.md
docs/security/: audit-preparation.md
integrations/infill/: __init__.py  adapter.py  test_adapter.py
scripts/: install_bedrock.ps1
sdk/: README.md  pyproject.toml
sdk-python/: pyproject.toml
sdk-python/bedrock_sdk/: __init__.py  client.py  exceptions.py
sdk-python/tests/: test_sdk_client.py
sdk-ts/: LICENSE  README.md  infill-bedrock-sdk-0.3.0.tgz  jest.config.js  package-lock.json  package.json  tsconfig.json
sdk-ts/coverage/: clover.xml  coverage-final.json  lcov.info
sdk-ts/coverage/lcov-report/: access.ts.html  audit.ts.html  client.ts.html  data.ts.html  encryption.ts.html  identity.ts.html  index.html  transport.ts.html  types.ts.html
sdk-ts/src/: access.ts  audit.ts  client.ts  data.ts  encryption.ts  identity.ts  index.ts  licensing.ts  silo.ts  transport.ts  types.ts
sdk-ts/tests/: expanded.test.ts  integration.test.ts  sdk.test.ts
sdk/bedrock_sdk/: __init__.py  access.py  audit.py  client.py  data.py  encryption.py  identity.py  transport.py
sdk/tests/: test_integration.py  test_sdk.py
site/: agents.html  buildrock2026indexnow.txt  index.html  sitemap.xml
templates/: __init__.py
templates/banking/: __init__.py  test_banking.py
templates/defense/: __init__.py  test_defense.py
templates/healthcare/: __init__.py  test_healthcare.py
templates/investment/: __init__.py  test_investment.py
tests/: __init__.py  conftest.py  test_aad.py  test_access_control.py  test_anonymous_id.py  test_api_server.py  test_attestation.py  test_audit_chain.py  test_capabilities.py  test_certificates.py  test_checkout.py  test_ciphertext_format.py  test_cli.py  test_config.py  test_data_separation.py  test_detector.py  test_e2e_patient_journey.py  test_encryption.py  test_encryption_legacy.py  test_health.py  test_integration.py  test_key_management.py  test_key_rotation.py  test_keygen.py  test_licensing.py  test_mesh_integration.py  test_mesh_state_machine.py  test_metering.py  test_node.py  test_node_registration.py  test_performance.py  test_self_healing_mesh.py  test_storage.py  test_stripe_e2e.py  test_tls.py  test_transport_security.py
