[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bedrock-core"
version = "0.3.0"
description = "Identity-based security framework. Every node is a user. Everything between is encrypted at rest."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSL-1.1"}
authors = [
    {name = "InFill Systems, LLC"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "License :: Other/Proprietary License",
]

dependencies = [
    # Core crypto — proven in InFill
    "cryptography>=42.0",
    # Async framework
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    # UUID v7 (time-sortable)
    "uuid7>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "black>=24.0",
    "isort>=5.13",
]
sqlcipher = [
    # Optional: encrypted SQLite storage for production
    "sqlcipher3>=0.5",
]
hsm = [
    # Optional: HSM integration for production key storage
    "pkcs11>=1.1",
]
stripe = [
    # Optional: Stripe integration for license billing
    "stripe>=10.0",
]

[project.scripts]
bedrock = "bedrock.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bedrock*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "C4"]
ignore = ["E501"]  # Line length handled by black

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100