[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bedrock-sdk"
version = "0.1.0"
description = "Bedrock SDK — Developer-friendly API for identity-based security. Every node is a user. Everything between is encrypted at rest."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "TRADE SECRET — InFill Systems, LLC. All rights reserved."}
authors = [
    {name = "InFill Systems, LLC"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Private :: Do Not Upload",
]

dependencies = [
    "bedrock-core>=0.1.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "black>=24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bedrock_sdk*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100